...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarnombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Editar" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarcorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Editar" />
...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Editar" />
...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Editar" />
...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarciudad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Editar" />
...
                            android:textColor="#044"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/editarfoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="#FFF"
                        android:background="#044"
                        android:text="Cambiar" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

...
