...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinnerdepartamento"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Spinner
            android:id="@+id/spinnerciudad"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="Actualizar"
            android:textColor="#FFF"
            android:background="#044"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerciudad" />
...
